# tts-rust

./: .env.example  .gitignore  CODE_WIKI.md  Cargo.toml  LICENSE  README.md  build.rs  installer.iss  项目架构深度解析.md
src/: config.rs  gui.rs  main.rs  player.rs  tts.rs
