[package]
name = "tts_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
rodio = "0.17"
anyhow = "1"
dirs = "5"
rfd = "0.13"
open = "5"
base64 = "0.22"

[profile.release]
opt-level = 2
lto = true
